AC_INIT
AC_CONFIG_SRCDIR([w3m.el])
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_CHECK_PROG(MAKEINFO, makeinfo, makeinfo, no)
AC_CHECK_TEXINFO($MAKEINFO)
AC_CHECK_PROG(TEXI2PDF, texi2pdf, texi2pdf, no)
AC_CHECK_TEXINFO($TEXI2PDF)
AC_CHECK_PROGS(EGREP, egrep grep, )
AC_CHECK_PROG(CYGPATH, cygpath, cygpath, no)
AC_PATH_EMACS
AC_PATH_LISPDIR
AC_PATH_ICONDIR
AC_ADD_LOAD_PATH
AC_COMPRESS_INSTALL
AC_CONFIG_FILES([Makefile doc/Makefile])
AC_OUTPUT
